# ARM-Sim2sim-Isaaclab-to-Gazebo

./: .gitignore  README.md  launch_sim.sh
install/: local_setup.sh  setup.sh
install/arm_description/share/ament_index/resource_index/package_run_dependencies/: arm_description
install/arm_description/share/arm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/arm_description/share/arm_description/cmake/: arm_descriptionConfig-version.cmake  arm_descriptionConfig.cmake
install/arm_description/share/arm_description/environment/: ament_prefix_path.dsv  path.dsv
install/arm_description/share/arm_description/meshes/: base_link.STL  gripper_1_link.STL  gripper_2_link.STL  gripper_centor_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
install/arm_description/share/arm_description/urdf/: panther_description.urdf  panther_gazebo.urdf.xacro  panther_gazebo_control.xacro  panther_with_ros2_control.urdf.xacro
install/arm_rl_sim/share/arm_rl_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arm_rl_sim/share/arm_rl_sim/cmake/: arm_rl_simConfig-version.cmake  arm_rl_simConfig.cmake
install/arm_rl_sim/share/arm_rl_sim/config/: robot_control.yaml
install/arm_rl_sim/share/arm_rl_sim/environment/: ament_prefix_path.dsv  path.dsv
install/arm_rl_sim/share/arm_rl_sim/launch/: gazebo.launch.py
install/robot_joint_controller/share/robot_joint_controller/: local_setup.sh  package.sh  robot_joint_controller_plugins.xml
install/robot_joint_controller/share/robot_joint_controller/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  robot_joint_controllerConfig.cmake
install/robot_msgs/include/robot_msgs/robot_msgs/msg/: imu.h  (+16 more)
install/robot_msgs/share/robot_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/robot_msgs/share/robot_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_robot_msgs__rosidl_generator_cExport.cmake  export_robot_msgs__rosidl_generator_cppExport.cmake  export_robot_msgs__rosidl_generator_pyExport.cmake  export_robot_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_robot_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  robot_msgsConfig-version.cmake  robot_msgsConfig.cmake  robot_msgs__rosidl_typesupport_cExport.cmake  robot_msgs__rosidl_typesupport_cppExport.cmake  robot_msgs__rosidl_typesupport_introspection_cExport.cmake  robot_msgs__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/robot_msgs/share/robot_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/robot_msgs/share/robot_msgs/msg/: ArmDebugStatus.idl  ArmDebugStatus.msg  IMU.idl  IMU.msg  MotorCommand.idl  MotorCommand.msg  MotorState.idl  MotorState.msg  RobotCommand.idl  RobotCommand.msg  RobotState.idl  RobotState.msg
log/: latest_build
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/urdf/: panther_description.urdf  panther_gazebo.urdf.xacro  panther_gazebo_control.xacro  panther_with_ros2_control.urdf.xacro
src/arm_rl_sim/: CMakeLists.txt  README.md  package.xml
src/arm_rl_sim/config/: robot_control.yaml
src/arm_rl_sim/include/: arm_rl_sim.hpp
src/arm_rl_sim/launch/: gazebo.launch.py
src/arm_rl_sim/models/arm_t_isaaclab/: config.yaml  policy.pt
src/arm_rl_sim/models/arm_t_isaaclab/params/: agent.pkl  agent.yaml  env.pkl  env.yaml
src/arm_rl_sim/scripts/: arm_rl_sim.py  gripper_holder.py  gripper_mimic_controller.py  target_pose_publisher.py
src/arm_rl_sim/src/: arm_rl_sim.cpp
src/robot_joint_controller/: CMakeLists.txt  package.xml
src/robot_joint_controller/include/robot_joint_controller/: robot_joint_controller.hpp  robot_joint_controller_group.hpp
src/robot_joint_controller/src/: robot_joint_controller.cpp  robot_joint_controller_group.cpp
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: ArmDebugStatus.msg  IMU.msg  MotorCommand.msg  MotorState.msg  RobotCommand.msg  RobotState.msg
(+76 files in other folders)
