<?xml version="1.0"?>
<package format="3">
    <name>arm_rl_sim</name>
    <version>1.0.0</version>
    <description>The arm_rl_sim package - Sim2Sim for 6-DOF robotic arm reach-ik task</description>

    <maintainer email="user@example.com">User</maintainer>

    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    
    <depend>rclpy</depend>
    <depend>geometry_msgs</depend>
    <depend>robot_msgs</depend>
    <depend>robot_joint_controller</depend>
    <depend>robot_state_publisher</depend>
    <depend>gazebo_ros</depend>
    <depend>controller_manager</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
