<?xml version="1.0"?>
<package format="3">
  <name>robot_joint_controller</name>
  <version>1.0.0</version>
  <description>Custom joint controller for robot with PD control and torque feedforward</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>robot_msgs</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/robot_joint_controller_plugins.xml"/>
  </export>
</package>

